# SESGO

./: .gitignore  README.md  pyproject.toml
notebooks/: SESGO_Workflow.ipynb
prompts/: prompts_clasismo.xlsx  prompts_clasismo_bbq_en.xlsx  prompts_clasismo_en.xlsx  prompts_clasismo_es.xlsx  prompts_genero.xlsx  prompts_genero_EN.xlsx  prompts_genero_es.xlsx  prompts_racismo.xlsx  prompts_racismo_en.xlsx  prompts_racismo_es.xlsx  prompts_xenofobia.xlsx  prompts_xenofobia_en.xlsx  prompts_xenofobia_es.xlsx
results_metrics/tables/: metrics_ambiguous.xlsx  metrics_disambiguated.xlsx
results_metrics/tables/fullTemperatures/: bias_scores_fullTemp_ambi.xlsx  bias_scores_fullTemp_disam.xlsx  results_xpooled_fullTemp_amb.xlsx  results_xpooledfullTemp_disamb.xlsx
results_metrics/tables/multilingual/: ambig_english.xlsx  ambig_spanish.xlsx  disamb_english.xlsx  disamb_spanish.xlsx
results_prompts/: Resultados inglés.xlsx  Resultados_agregados_Temperaturas.xlsx  Resultados_agregados_vf_T075.xlsx
src/create_prompts/: templates_to_prompts.py
src/metrics/: compute_metrics.py  language_metrics.py  main.py  plot_results.py  temperatures.py
src/process_results/: collect_processed_results.py  deepseek_process_answers.py  process_answers.py
src/run_llms/: claude_runner.py  deepseek_runner.py  gemini_runner.py  gpt_runner.py  llama_runner.py  run_llm.py  runner.py
templates/: templates_clasismo.xlsx  templates_genero.xlsx  templates_racismo.xlsx  templates_xenofobia.xlsx
