[project]
name = "sesgo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "azureopenai>=0.0.1",
    "dotenv>=0.9.9",
    "google-genai>=1.11.0",
    "openai>=1.75.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "tensorflow>=2.19.0",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]
